[gd_scene load_steps=7 format=3 uid="uid://b4cy3jnrwpmvu"]

[ext_resource type="Script" uid="uid://bi3adbp54hk6s" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://cqwghyh5lewfh" path="res://shader_editor.tscn" id="2_1bvp3"]
[ext_resource type="Image" uid="uid://bynntjpnatjc0" path="res://fatguy4k.jpg" id="2_lquwl"]
[ext_resource type="PackedScene" uid="uid://byajjnj7jbphm" path="res://shader_pass_display.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://105n2kf8d3gu" path="res://shader_pass_viewport.tscn" id="4_1bvp3"]

[sub_resource type="ViewportTexture" id="ViewportTexture_1bvp3"]
viewport_path = NodePath("/root/Main/Viewports/ShaderPassViewport")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")
base_image = ExtResource("2_lquwl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="MenuBar" parent="VBoxContainer"]
layout_mode = 2

[node name="Project" type="PopupMenu" parent="VBoxContainer/MenuBar"]
item_count = 2
item_0/text = "Save"
item_0/id = 0
item_1/text = "Load"
item_1/id = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 580

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Code"

[node name="Editors" type="TabContainer" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="ShaderEditor" parent="VBoxContainer/HSplitContainer/PanelContainer/VBoxContainer/Editors" instance=ExtResource("2_1bvp3")]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2"]
layout_mode = 2
split_offset = 75

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer"]
layout_mode = 2
text = "Uniforms"

[node name="Uniforms" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer2"]
layout_mode = 2
text = "Image"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Passes" type="TabContainer" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="TextureRect" parent="VBoxContainer/HSplitContainer/PanelContainer2/VSplitContainer/VBoxContainer2/ScrollContainer/Passes" instance=ExtResource("3_1bvp3")]
layout_mode = 2
texture = SubResource("ViewportTexture_1bvp3")
metadata/_tab_index = 0

[node name="Viewports" type="Node" parent="."]

[node name="ShaderPassViewport" parent="Viewports" instance=ExtResource("4_1bvp3")]

[node name="OpenFileDialog" type="FileDialog" parent="."]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 1

[connection signal="id_pressed" from="VBoxContainer/MenuBar/Project" to="." method="_on_project_menu_id_pressed"]
[connection signal="file_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_file_selected"]
